<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="main.java.com.zetauma.complainloudly.MainActivity" >

    <Button
        android:id="@+id/buttonAtualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/atualizar_button" />

    <Button
        android:id="@+id/buttonReclamar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reclamar_button" />

    <Button
        android:id="@+id/buttonTodasReclamacoes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonReclamar"
        android:layout_alignBottom="@+id/buttonReclamar"
        android:layout_toLeftOf="@+id/buttonReclamar"
        android:text="@string/todas_reclamacoes_button" />

    <Button
        android:id="@+id/buttonMinhasReclamacoes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonReclamar"
        android:layout_alignBottom="@+id/buttonReclamar"
        android:layout_toRightOf="@+id/buttonReclamar"
        android:text="@string/minhas_reclamacoes_button" />

    <ListView
        android:id="@+id/listViewReclamacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonReclamar"
        android:layout_alignLeft="@+id/buttonTodasReclamacoes"
        android:layout_alignRight="@+id/buttonMinhasReclamacoes"
        android:layout_below="@+id/buttonAtualizar" >

    </ListView>

</RelativeLayout>
